objects/expense__c.object
<CustomObject>
    <description>expenses on certain events</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>amount of details</description>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>date of the expense</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>event__c</fullName>
        <description>event name</description>
        <label>event</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>total_contributed__c</fullName>
        <label>total contributed</label>
        <summarizedField>expense_members__c.contribution_amount__c</summarizedField>
        <summaryForeignKey>expense_members__c.expenses__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>expense</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>less_than_rule</fullName>
        <active>true</active>
        <errorConditionFormula>total_contributed__c  &gt; Amount__c</errorConditionFormula>
        <errorMessage>Wait for the change customer</errorMessage>
    </validationRules>
</CustomObject>